--- a/beta/OdinV0.1/app/build.gradle
+++ b/beta/OdinV0.1/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.google.android.gms:play-services-appindexing:9.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
