--- a/beta/OdinV0.1/app/src/main/AndroidManifest.xml
+++ b/beta/OdinV0.1/app/src/main/AndroidManifest.xml
@@ -23,11 +23,16 @@
         <activity
             android:name=".BaseFirebase"
             android:label="@string/title_activity_base_firebase"
-            android:theme="@style/AppTheme.NoActionBar"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+            android:theme="@style/AppTheme.NoActionBar" />
+        <!--
+ ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".BaseFirebase2"></activity>
     </application>
 
 </manifest>
