--- a/beta/OdinV0.1/app/src/main/AndroidManifest.xml
+++ b/beta/OdinV0.1/app/src/main/AndroidManifest.xml
@@ -2,7 +2,56 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fsociety.projects.odinv01">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.INTERNET" />
+    
+        <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+        <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
+        <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+        <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
+        <uses-permission android:name="android.permission.READ_CONTACTS" />
+
+        <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+
+        <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
+
+        <uses-permission android:name="android.permission.READ_PROFILE"/>
+
+        <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+
+        <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+
+        <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+
+        <uses-permission android:name="android.permission.VIBRATE" />
+
+        <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+        <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+        <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+        <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+
+        <uses-permission android:name="android.permission.INSTALL_SHORTCUT" />
+
+        <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+
+        <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT"/>
+
+        <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
         android:allowBackup="true"
